--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -174,7 +174,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize14"
+                android:textSize="@dimen/textsize16"
                 android:textColor="@color/grey_333333"
                 android:layout_centerVertical="true"
                 android:text="@string/me_address"/>
@@ -200,7 +200,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/textsize14"
+            android:textSize="@dimen/textsize16"
             android:textColor="@color/grey_333333"
             android:layout_centerVertical="true"
             android:text="@string/me_bind_card"/>
@@ -369,9 +369,7 @@
     <RelativeLayout
         android:id="@+id/rl_me_customer_service"
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
-        android:layout_marginBottom="@dimen/margin_10"
+        android:layout_margin="@dimen/margin_10"
         android:background="@drawable/bg_sure_order_address"
         android:paddingLeft="@dimen/padding_15"
         android:paddingRight="@dimen/padding_15"
@@ -379,7 +377,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/textsize14"
+            android:textSize="@dimen/textsize16"
             android:textColor="@color/grey_333333"
             android:layout_centerVertical="true"
             android:text="@string/me_customer_service"/>
