--- a/app/src/main/res/layout/adapter_seckill.xml
+++ b/app/src/main/res/layout/adapter_seckill.xml
@@ -74,7 +74,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
                 app:isHideTimeBackground="false"
-                app:timeBgColor="#FF3C38"
+                app:timeBgColor="@color/text_label"
                 app:timeBgSize="11sp"
                 app:timeBgRadius="2dp"
                 app:isShowDay="false"
@@ -85,7 +85,7 @@
                 app:timeTextSize="11sp"
                 app:isTimeTextBold="true"
                 app:suffixGravity="center"
-                app:suffixTextColor="#FF3C38"
+                app:suffixTextColor="@color/text_label"
                 app:suffixTextSize="11sp"
                 app:suffixHour=":"
                 app:suffixMinute=":"
