--- a/app/src/main/res/drawable/bg_home_recommend_click.xml
+++ b/app/src/main/res/drawable/bg_home_recommend_click.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ffff3c38" />
-    <corners android:topLeftRadius="7dp" android:topRightRadius="7dp" android:bottomLeftRadius="7dp" android:bottomRightRadius="7dp" />
+    <solid android:color="@color/text_label" />
+    <corners android:topLeftRadius="10dp" android:topRightRadius="10dp" android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" />
+    <padding android:top="0dp" android:bottom="0dp" android:right="@dimen/padding_5" android:left="@dimen/padding_5"/>
 </shape>
