--- a/app/src/main/res/drawable/goods_detail_discount.xml
+++ b/app/src/main/res/drawable/goods_detail_discount.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ffff3c38" />
+    <solid android:color="@color/text_label" />
     <gradient android:type="linear" android:useLevel="true" android:startColor="#ffd43a31" android:endColor="#ffff594a" android:angle="90" />
 </shape>
