--- a/app/src/main/res/layout/activity_seckill.xml
+++ b/app/src/main/res/layout/activity_seckill.xml
@@ -20,7 +20,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="#FF3C38"
+        android:background="@color/text_label"
         >
 
         <LinearLayout
