--- a/app/src/main/res/layout/adapter_goodslist.xml
+++ b/app/src/main/res/layout/adapter_goodslist.xml
@@ -7,11 +7,8 @@
 
         <variable
             name="goodslist"
-            type="com.lzyyd.hsq.bean.HomeItemBean" />
+            type="com.lzyyd.hsq.bean.GoodsListBean" />
 
-        <variable
-            name="resImgId"
-            type="String" />
     </data>
 
 <RelativeLayout
@@ -39,7 +36,7 @@
                 android:background="@color/line_bg"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                lzy:image="@{resImgId}"
+                lzy:image="@{goodslist.goodsImg}"
                 lzy:left_top_radius="5dp"
                 lzy:right_top_radius="5dp"/>
 
